Fixed warning on deprecated Number-Object constructor use since JDK9 (#229)